// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`§11.1 golden snapshots > ascii-diagrams 1`] = `
{
  "capabilities": {
    "entities": false,
    "glossary": false,
    "graph": false,
    "loop": false,
    "mermaid": false,
    "stepper": false,
    "terminal": true,
  },
  "glossaryTerms": [],
  "graphDerived": null,
  "introKinds": {
    "prose": 1,
  },
  "sections": [
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
        "terminal": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "fixture-a--vertical-flow",
      "tests": [],
      "title": "Fixture A — vertical flow",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
        "terminal": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "fixture-b--unicode-boxes",
      "tests": [],
      "title": "Fixture B — Unicode boxes",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
        "terminal": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "fixture-c--interior-junctions",
      "tests": [],
      "title": "Fixture C — interior junctions",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
        "terminal": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "fixture-d--vertical-arrow",
      "tests": [],
      "title": "Fixture D — vertical arrow",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
        "terminal": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "fixture-e--hostile-prose",
      "tests": [],
      "title": "Fixture E — hostile prose",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
        "terminal": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "fixture-f--dangling-arrow",
      "tests": [],
      "title": "Fixture F — dangling arrow",
    },
  ],
  "stats": {
    "codeBlocks": 6,
    "diagrams": 0,
    "sections": 6,
    "words": 354,
  },
  "stepCount": 0,
  "title": "ASCII Diagram Fixtures",
  "titleSource": "frontmatter",
}
`;

exports[`§11.1 golden snapshots > crosslinked 1`] = `
{
  "capabilities": {
    "entities": false,
    "glossary": false,
    "graph": true,
    "loop": false,
    "mermaid": false,
    "stepper": false,
    "terminal": false,
  },
  "glossaryTerms": [],
  "graphDerived": true,
  "introKinds": {
    "prose": 1,
  },
  "sections": [
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [
        "storage",
      ],
      "slug": "ingest",
      "tests": [],
      "title": "Ingest",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [
        "presentation",
      ],
      "slug": "storage",
      "tests": [],
      "title": "Storage",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [
        "ingest",
      ],
      "slug": "presentation",
      "tests": [],
      "title": "Presentation",
    },
  ],
  "stats": {
    "codeBlocks": 0,
    "diagrams": 0,
    "sections": 3,
    "words": 123,
  },
  "stepCount": 0,
  "title": "Crosslinked Fixture",
  "titleSource": "h1",
}
`;

exports[`§11.1 golden snapshots > edge-cases 1`] = `
{
  "capabilities": {
    "entities": false,
    "glossary": false,
    "graph": false,
    "loop": false,
    "mermaid": false,
    "stepper": false,
    "terminal": false,
  },
  "glossaryTerms": [],
  "graphDerived": null,
  "introKinds": {
    "prose": 1,
  },
  "sections": [
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "duplicate-headings",
      "tests": [],
      "title": "Duplicate headings",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [
        "duplicate-headings",
      ],
      "slug": "duplicate-headings-1",
      "tests": [],
      "title": "Duplicate headings",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [
        "self-reference",
      ],
      "slug": "self-reference",
      "tests": [],
      "title": "Self reference",
    },
    {
      "cells": [],
      "children": [
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "prose": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "中文标题",
          "tests": [],
          "title": "中文标题",
        },
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "prose": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "пример",
          "tests": [],
          "title": "Пример",
        },
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "prose": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "-launch",
          "tests": [],
          "title": "🚀 Launch",
        },
      ],
      "files": [],
      "kinds": {},
      "level": 2,
      "linksTo": [],
      "slug": "unicode-headings",
      "tests": [],
      "title": "Unicode headings",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "html": 2,
        "prose": 2,
      },
      "level": 2,
      "linksTo": [],
      "slug": "raw-html-in-markdown",
      "tests": [],
      "title": "Raw HTML in markdown",
    },
    {
      "cells": [
        "h:Column | Meaning",
      ],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
        "table": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "empty-table",
      "tests": [],
      "title": "Empty table",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "code": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "nested-code-fences",
      "tests": [],
      "title": "Nested code fences",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "code": 3,
        "prose": 4,
      },
      "level": 2,
      "linksTo": [],
      "slug": "malformed-blocks",
      "tests": [],
      "title": "Malformed blocks",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 2,
      },
      "level": 2,
      "linksTo": [],
      "slug": "reference-style-links",
      "tests": [],
      "title": "Reference-style links",
    },
    {
      "cells": [],
      "children": [],
      "files": [
        "src/pipeline/slug.ts",
        "tools/lint.py",
        "src/pipeline/slug.ts::slugify",
      ],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "prose-with-entities",
      "tests": [],
      "title": "Prose with entities",
    },
  ],
  "stats": {
    "codeBlocks": 4,
    "diagrams": 0,
    "sections": 10,
    "words": 304,
  },
  "stepCount": 0,
  "title": "Edge Cases",
  "titleSource": "h1",
}
`;

exports[`§11.1 golden snapshots > kitchen-sink 1`] = `
{
  "capabilities": {
    "entities": true,
    "glossary": true,
    "graph": true,
    "loop": true,
    "mermaid": true,
    "stepper": true,
    "terminal": true,
  },
  "glossaryTerms": [
    "Measurement Run",
    "Adapter",
    "Snapshot",
  ],
  "graphDerived": false,
  "introKinds": {
    "prose": 1,
  },
  "sections": [
    {
      "cells": [],
      "children": [
        {
          "cells": [
            "h:Tool | Purpose | Notes",
            "r:Node | runtime | LTS only",
            "r:npm ci | install | frozen lockfile",
            "r:make check | verify | runs tests",
          ],
          "children": [],
          "files": [
            "docs/spec.md",
            "unfold.config.json",
            "src/pipeline/slug.ts::slugify",
          ],
          "kinds": {
            "prose": 1,
            "table": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "environment",
          "tests": [],
          "title": "Environment",
        },
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "code": 2,
          },
          "level": 3,
          "linksTo": [],
          "slug": "tagged-examples",
          "tests": [],
          "title": "Tagged examples",
        },
      ],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "getting-started",
      "tests": [],
      "title": "Getting started",
    },
    {
      "cells": [],
      "children": [
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "graph": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "component-graph",
          "tests": [],
          "title": "Component graph",
        },
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "steps": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "request-walkthrough",
          "tests": [],
          "title": "Request walkthrough",
        },
      ],
      "files": [],
      "kinds": {
        "loop": 1,
        "mermaid": 1,
        "prose": 3,
        "terminal": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "runtime-shape",
      "tests": [],
      "title": "Runtime shape",
    },
    {
      "cells": [
        "h:Signal | Meaning | Action",
        "r:p95 | tail latency | investigate",
        "r:errors | failed docs | check frontmatter",
      ],
      "children": [],
      "files": [
        "tools/build.sh",
        "src/pipeline/entities.ts::extractEntities",
      ],
      "kinds": {
        "hr": 1,
        "prose": 1,
        "quote": 1,
        "table": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "operational-notes",
      "tests": [],
      "title": "Operational notes",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "notes",
      "tests": [],
      "title": "Notes",
    },
    {
      "cells": [],
      "children": [
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "prose": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "measurement-run",
          "tests": [],
          "title": "Measurement Run",
        },
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "prose": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "adapter",
          "tests": [],
          "title": "Adapter",
        },
        {
          "cells": [],
          "children": [],
          "files": [],
          "kinds": {
            "prose": 1,
          },
          "level": 3,
          "linksTo": [],
          "slug": "snapshot",
          "tests": [],
          "title": "Snapshot",
        },
      ],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "glossary",
      "tests": [],
      "title": "Glossary",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "notes-1",
      "tests": [],
      "title": "Notes",
    },
  ],
  "stats": {
    "codeBlocks": 3,
    "diagrams": 4,
    "sections": 6,
    "words": 312,
  },
  "stepCount": 3,
  "title": "Kitchen Sink Fixture",
  "titleSource": "frontmatter",
}
`;

exports[`§11.1 golden snapshots > minimal 1`] = `
{
  "capabilities": {
    "entities": false,
    "glossary": false,
    "graph": false,
    "loop": false,
    "mermaid": false,
    "stepper": false,
    "terminal": false,
  },
  "glossaryTerms": [],
  "graphDerived": null,
  "introKinds": {
    "prose": 1,
  },
  "sections": [
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "purpose",
      "tests": [],
      "title": "Purpose",
    },
    {
      "cells": [],
      "children": [],
      "files": [],
      "kinds": {
        "prose": 1,
      },
      "level": 2,
      "linksTo": [],
      "slug": "scope",
      "tests": [],
      "title": "Scope",
    },
  ],
  "stats": {
    "codeBlocks": 0,
    "diagrams": 0,
    "sections": 2,
    "words": 58,
  },
  "stepCount": 0,
  "title": "Minimal Fixture",
  "titleSource": "h1",
}
`;

exports[`§11.1 golden snapshots > no-structure 1`] = `
{
  "capabilities": {
    "entities": false,
    "glossary": false,
    "graph": false,
    "loop": false,
    "mermaid": false,
    "stepper": false,
    "terminal": false,
  },
  "glossaryTerms": [],
  "graphDerived": null,
  "introKinds": {
    "prose": 3,
  },
  "sections": [],
  "stats": {
    "codeBlocks": 0,
    "diagrams": 0,
    "sections": 0,
    "words": 86,
  },
  "stepCount": 0,
  "title": "No Structure",
  "titleSource": "filename",
}
`;
